--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ ext {
     appcompat_version = '1.1.0'
     core_version = '1.2.0'
     constraintlayout_version = '1.1.3'
+    recyclerview_version = '1.1.0'
+    navigation_version = '2.2.2'
 
     dagger_version = '2.27'
 
@@ -47,12 +49,17 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
 
     // Testing
     testImplementation "junit:junit:$junit_version"
