--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,14 @@ android {
         versionCode 1
         versionName "1.0"
 
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [
+                        "room.schemaLocation": "$projectDir/schemas".toString()
+                ]
+            }
+        }
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -33,6 +41,7 @@ ext {
     constraintlayout_version = '1.1.3'
     recyclerview_version = '1.1.0'
     navigation_version = '2.2.2'
+    room_version = '2.2.5'
 
     dagger_version = '2.27'
 
@@ -50,6 +59,10 @@ dependencies {
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     // Dagger
     implementation "com.google.dagger:dagger:$dagger_version"
