--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,14 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    compileOptions {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -40,6 +48,7 @@ ext {
     core_version = '1.2.0'
     constraintlayout_version = '1.1.3'
     recyclerview_version = '1.1.0'
+    lifecycle_version = '2.2.0'
     navigation_version = '2.2.2'
     room_version = '2.2.5'
 
@@ -58,6 +67,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
 
     // Room
