--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ ext {
 
     dagger_version = '2.27'
 
+    material_version = '1.1.0'
+
     junit_version = '4.12'
     android_junit_version = '1.1.1'
     espresso_version = '3.2.0'
@@ -80,6 +82,9 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+
+    // Material
+    implementation "com.google.android.material:material:$material_version"
 
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
